<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.transfer.EasyTransferFragment">

    <Button
        android:id="@+id/send_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/send"
        android:textColor="@color/black"
        android:background="#4F00BCD4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/receive_frame"
        android:layout_weight="1"
        android:text="@string/receive"
        android:textColor="@color/black"
        android:background="#31FF5722"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/split_frame"
        android:layout_weight="1"
        android:text="@string/split"
        android:textColor="@color/black"
        android:background="#6D3F51B5"/>

</LinearLayout>